# fortum

./: .dockerignore  .gitattributes  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  Rocket.toml  fly.toml  postcss.config.js  sqlx-data.json
.github/workflows/: fly.yml
migrations/: 20220905200827_init.sql  20220905204513_chat.sql  20220906164131_remove-bigint.sql  20220912213424_create-index.sql
sql/: debug.sql  init.sql
src/: cache_file_server.rs  common.rs  consts.rs  db.rs  endpoints.rs  main.rs
src/common/: authentication.rs  chat.rs  get_handler.rs  get_handler_macros.rs  mod.rs  post.rs  stats.rs  template_vars.rs  user.rs  utils.rs
src/db/: account.rs  chat.rs  mod.rs  posts.rs  stats.rs  user.rs
src/endpoints/: api.rs  captcha.rs  chat.rs  delete_account.rs  dyn_profile_image.rs  error.rs  frontend.rs  index.rs  login.rs  logout.rs  misc.rs  mod.rs  post.rs  register.rs  submit.rs  topics.rs  topics_create.rs  update_profile.rs  update_username.rs  user.rs  verify.rs  vote.rs
src/endpoints/api/: login.rs  logout.rs  register.rs
src/endpoints/frontend/: index.rs  login.rs  register.rs
static/css/: animation.css  buttons.css  chat_list.css  chat_page.css  colors.css  const.css  error.css  footer.css  global.css  header.css  header_popup.css  header_user.css  index.css  index_landing.css  login.css  noscript.css  posts.css  register.css  share.css  success.css  user.css  user_self.css
static/css/chat/: chat.css  conversation_view.css  layout.css  message_box.css  message_view.css  page_chat.css  (+1 more)
static/fontello/: demo.html
static/fonts/: all.css
static/js/: accordion.js  buttons.js  chat.js  global.js  header.js  index_landing.js  login.js  posts.js  register.js  share.js  user_self.js
templates/: chat.html.tera  error.html.tera  index.hbs  index.html.tera  index_landing.html.tera  login.html.tera  post.html.tera  register.html.tera  sad.htlm.tera  submit.html.tera  success.html.tera  topic.html.tera  topics_create.html.tera  user.html.tera
templates/common/: layout.hbs
templates/misc/: chat_message_item.html.tera  profile_image.svg.tera
templates/stuff/: base.html.tera  chat_message_box.html.tera  footer.html.tera  header.html.tera  index_landing.html.tera  partials.html.tera  post_imports.html.tera  share_modal.html.tera
(+19 files in other folders)
