[package]
name = "forum"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
rocket_db_pools = { version = "0.1.0-rc.3", features = ["sqlx_postgres"] }
sqlx = { version = "0.6", default-features = false, features = ["offline", "postgres", "chrono", "macros", "migrate"] }
figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.8"
lazy_static = "1.4"
rust-argon2 = "1.0"
dotenvy = "0.15"
rand = "0.8"
base64 = "0.21"
# lettre = "0.10" TODO FOR VERIFICATION
# rust-s3 = "0.32" TODO FOR STORING USER UPLOADS (on filebase?)
